--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,10 +52,10 @@
         </LinearLayout>
 
         <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:alpha="0.5"
-        android:background="#000000" />
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:alpha="0.5"
+            android:background="#000000" />
 
         <ScrollView
             android:layout_width="fill_parent"
@@ -85,26 +85,26 @@
                     android:id="@+id/tvMainMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:gravity="center"
                     android:text="@string/login_info_mainMessage"
-                    android:textColor="#1e1e1e"
-                    android:layout_gravity="center_horizontal"/>
+                    android:textColor="#1e1e1e" />
 
                 <TextView
                     android:id="@+id/tvSubMessage"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:text="@string/login_info_subMessage"
                     android:textColor="#bebebe"
-                    android:textSize="10dp"
-                    android:layout_gravity="center_horizontal"/>
+                    android:textSize="10dp" />
 
                 <LinearLayout
-                    android:layout_marginTop="50dp"
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
+                    android:layout_marginTop="50dp"
                     android:gravity="bottom|center_horizontal"
                     android:orientation="vertical">
 
@@ -201,38 +201,62 @@
                                 android:button="@drawable/term_check" />
 
                         </LinearLayout>
-
-
                     </LinearLayout>
 
-                    <Button
-                        android:id="@+id/btLogin"
+                    <FrameLayout
+                        android:id="@+id/llLogin"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:background="#f12653"
-                        android:text="@string/login_loginText"
-                        android:textColor="#ffffff"
-                        android:textStyle="bold" />
+                        android:orientation="horizontal">
 
-                    <Button
-                        android:id="@+id/btFindAccount"
+                        <TextView
+                            android:id="@+id/tvLogin"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="@string/login_loginText"
+                            android:textColor="#ffffff"
+                            android:textSize="13dp"
+                            android:textStyle="bold" />
+
+                        <ProgressBar
+                            android:visibility="gone"
+                            android:id="@+id/pbLoading"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            style="?android:attr/progressBarStyleSmall"/>
+                    </FrameLayout>
+
+
+                    <LinearLayout
+                        android:id="@+id/llFindAccount"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:background="#ffffff"
-                        android:text="@string/login_findAccount"
-                        android:textSize="8dp" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tvFindAccount"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="@string/login_findAccount"
+                            android:textColor="#919191"
+                            android:textSize="13dp" />
+                    </LinearLayout>
 
                     <Button
-                        android:visibility="gone"
                         android:id="@+id/btAutoLoginTerm"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#ececec"
-                        android:textColor="#989898"
+                        android:background="#ffffff"
                         android:text="@string/login_termText3"
-                        android:textSize="8dp" />
+                        android:textColor="#989898"
+                        android:textSize="13dp"
+                        android:visibility="gone" />
 
                 </LinearLayout>
             </LinearLayout>
