--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -251,8 +251,8 @@
                     <Button
                         android:id="@+id/btAutoLoginTerm"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#ffffff"
+                        android:layout_height="40dp"
+                        android:background="#ececec"
                         android:text="@string/login_termText3"
                         android:textColor="#989898"
                         android:textSize="13dp"
