--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,47 +63,47 @@
             android:fillViewport="true">
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal">
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="6"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/ivLogo"
-                        android:layout_width="260dp"
-                        android:layout_height="200dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
                         android:padding="20dp"
-                        android:scaleType="fitXY"
                         android:src="@drawable/login" />
+
+                    <TextView
+                        android:id="@+id/tvMainMessage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/login_info_mainMessage"
+                        android:textColor="#1e1e1e" />
+
+                    <TextView
+                        android:id="@+id/tvSubMessage"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:text="@string/login_info_subMessage"
+                        android:textColor="#bebebe"
+                        android:textSize="10dp" />
+
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/tvMainMessage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:text="@string/login_info_mainMessage"
-                    android:textColor="#1e1e1e" />
-
-                <TextView
-                    android:id="@+id/tvSubMessage"
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:text="@string/login_info_subMessage"
-                    android:textColor="#bebebe"
-                    android:textSize="10dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="50dp"
                     android:gravity="bottom|center_horizontal"
                     android:orientation="vertical">
@@ -143,11 +143,10 @@
                         android:layout_marginRight="15dp"
                         android:layout_marginBottom="10dp"
                         android:background="#ffffff"
-                        android:drawableLeft="@drawable/password_icon"
-                        android:drawablePadding="12dp"
+                        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                        android:drawablePadding="5dp"
                         android:hint="@string/login_passwordText"
                         android:inputType="textPassword"
-                        android:paddingLeft="8dp"
                         android:textColor="#1e1e1e"
                         android:textSize="11dp" />
 
@@ -165,7 +164,7 @@
                     <LinearLayout
                         android:id="@+id/llTerm"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="20dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:layout_marginBottom="10dp"
@@ -198,7 +197,8 @@
                                 android:id="@+id/cbTerm"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:button="@drawable/term_check" />
+                                android:background="@drawable/term_check"
+                                android:button="@null" />
 
                         </LinearLayout>
                     </LinearLayout>
@@ -223,11 +223,11 @@
                             android:textStyle="bold" />
 
                         <ProgressBar
-                            android:visibility="gone"
                             android:id="@+id/pbLoading"
+                            style="?android:attr/progressBarStyleSmall"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            style="?android:attr/progressBarStyleSmall"/>
+                            android:visibility="gone" />
                     </FrameLayout>
 
 
