--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,7 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="6"
+                    android:layout_weight="10"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -164,7 +164,7 @@
                     <LinearLayout
                         android:id="@+id/llTerm"
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:layout_marginBottom="10dp"
@@ -195,8 +195,8 @@
 
                             <CheckBox
                                 android:id="@+id/cbTerm"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
                                 android:background="@drawable/term_check"
                                 android:button="@null" />
 
